--- a/index.html
+++ b/index.html
@@ -5,23 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_2</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0327a3b405.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
-    <!-- ===================== HEADER ======================== -->
+    <div class="wrapper">
+        <!-- ===================== HEADER ======================== -->
+        <header class="header">
+            <nav class="menu">
+                <div class="menu__logo">
+                    <img src="images/logo-small.png">
+                </div>
+                <ul class="menu__list">
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Reviews</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- ===================== MAIN ======================== -->
+
+        <!-- ===================== FOOTER ======================== -->
 
 
 
-
-
-
-    <!-- ===================== MAIN ======================== -->
-
-    <!-- ===================== FOOTER ======================== -->
-
-
-
-
+    </div>
 </body>
 
 </html>
