[16.03.2020 Kapeliush - main content]

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_2</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/0327a3b405.js" crossorigin="anonymous"></script>
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:100,200,300,300i,400,400i,500,500i,700,700i&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/65c699733b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="wrapper">
+
         <!-- ===================== HEADER ======================== -->
         <header class="header">
             <nav class="menu">
                 <div class="menu__logo">
-                    <img src="images/logo-small.png">
+                    <img src="images/logo-small.png" alt="">
                 </div>
                 <ul class="menu__list">
                     <li><a href="#">Features</a></li>
@@ -29,6 +32,84 @@
         </header>
 
         <!-- ===================== MAIN ======================== -->
+
+        <main class="main">
+
+            <section class="section-one">
+                <div class="section-one__logo-text-button">
+                    <div class="section-one__logo">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                    <h1 class="section-one__title">Modern axure template for beatiful prototypes</h1>
+                    <hr class="section-one__line">
+                    </hr>
+                    <p class="section-one__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                        accumsan et viverra justo commodo.</p>
+                    <div class="section-one__button">
+                        <a href="#">Download</a>
+                    </div>
+                </div>
+
+                <form class="section-one__form" action="" method="post">
+                    <p clas="section-one__form-text">Try Your <span>free</span> Trial Today</p>
+                    <input class="section-one__form-name" type="text" name="name" placeholder="Name">
+                    <input class="section-one__form-email" type="text" name="email" placeholder="Email">
+                    <input class="section-one__form-password" type="password" name="password" placeholder="Password">
+                    <button class="section-one__form-button" type="submit">Get Started</button>
+                </form>
+            </section>
+
+            <section class="section-two">
+                <div class="section-two__text">
+                    <h2 class="section-two__title">Social Media</h2>
+                    <p class="section-two__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean euismod bibendum laoreet.</p>
+                </div>
+                <div class="section-two__links">
+                    <a href="#"> <i class="fab fa-facebook-f"></i> </a>
+                    <a href="#"> <i class="fab fa-twitter"></i></a>
+                    <a href="#"> <i class="fab fa-google-plus-g"></i></a>
+                    <a href="#"> <i class="fab fa-pinterest"></i></a>
+                    <a href="#"> <i class="fab fa-instagram"></i></a>
+                    <a href="#"> <i class="fab fa-stumbleupon"></i></a>
+                    <a href="#"> <i class="fas fa-rss"></i></a>
+                </div>
+            </section>
+
+            <section class="section-three">
+                <div class="section-three__tabs">
+                    <div class="section-three__tab-one"> <a href="#">Tab 1</a></div>
+                    <div class="section-three__tab-two"><a href="#">Tab 2</a></div>
+                    <div class="section-three__tab-three"><a href="#">Tab 3</a></div>
+                </div>
+                <div class="section-three__text-and-button">
+                    <h3 class="section-three__title">Tabs with soft transitioning effect.</h3>
+                    <p class="section-three__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes. </p>
+
+                    <p class="section-three__text-two"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet.</p>
+                    <div class="section-three__button">
+                        <a href="#">Download</a>
+                    </div>
+                </div>
+                <div class="section-three__image">
+                    <img src="images/city-image.png">
+                </div>
+            </section>
+
+            <section class="section-four">
+                <div class="section-four__image">
+                    <img src="images/">
+                </div>
+
+            </section>
+
+
+        </main>
 
         <!-- ===================== FOOTER ======================== -->
 
